--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.004   2023-01-19  Released-By: PERLANCAR; Urgency: medium
+
+        - Rename module/dist Bencher-Scenarios-{DigestSHA,Digest-SHA}.
+
+
 0.003   2017-07-10  Released-By: PERLANCAR
 
 	- No functional changes.
